# agents

./: README.md
skills/aws-cdk-ts/: SKILL.md
skills/aws-redshift-data-api/: SKILL.md
skills/bbcli/: SKILL.md
skills/biome/: SKILL.md
skills/biome-workspace/iteration-1/: benchmark.json  benchmark.md  grade.py
skills/biome-workspace/iteration-1/eval-0-fresh-setup-nuxt-pnpm/: eval_metadata.json
skills/biome-workspace/iteration-1/eval-1-migrate-eslint-prettier/: eval_metadata.json
skills/biome/evals/: evals.json
skills/biome/references/: cli.md  configuration.md  framework-notes.md  linter.md  migration.md  recipes.md
skills/contentstack-js-management-sdk/: SKILL.md
skills/contentstack-js-management-sdk/references/: advanced-resources.md
skills/contentstack-ts-delivery-sdk/: SKILL.md
skills/contentstack-ts-delivery-sdk/references/: image-transform.md
skills/hscli/: SKILL.md
skills/nuxt-eslint/: SKILL.md
skills/nuxt-eslint/references/: cli.md  configuration.md  integrations.md  migration.md  rules.md
skills/obsidian/: SKILL.md
skills/prettier/: SKILL.md
skills/prettier/references/: cli.md  integrations.md  options.md  sharing-configs.md
skills/tailwindcss-v4/: SKILL.md
skills/tailwindcss-v4/references/: colors.md  directives.md  theme.md
tools/bbcli/: README.md  pyproject.toml
tools/bbcli/bbcli/: cli.py  client.py  config.py  errors.py  output.py
tools/hscli/: README.md  pyproject.toml
tools/hscli/hscli/: cli.py  client.py  config.py  errors.py  output.py
(+29 files in other folders)
