[project]
name = "bbcli"
version = "0.1.0"
description = "Agent-friendly CLI for Bitbucket Cloud"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
bb = "bbcli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bbcli"]
